# yummy-indexing-delete

./: README.md
yummy-indexing-delete/: Cargo.toml
yummy-indexing-delete/data/: index_list.toml  test.sh
yummy-indexing-delete/src/: common.rs  main.rs
yummy-indexing-delete/src/configs/: elastic_server_config.rs  mod.rs
yummy-indexing-delete/src/controller/: main_controller.rs
yummy-indexing-delete/src/model/: mod.rs  target_index.rs
yummy-indexing-delete/src/repository/: es_repository.rs  mod.rs
yummy-indexing-delete/src/service/: index_clear_service.rs  mod.rs
yummy-indexing-delete/src/utils_module/: io_utils.rs  mod.rs  time_utils.rs
